--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "lodash": "^4.17.21",
     "ps-list": "^8.1.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-toastify": "^10.0.5"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.4.5",
