refactor: OptonDropdown feat: useKeysCallbacks hook refactor: AutoComplete component

--- a/electron-builder.json5
+++ b/electron-builder.json5
@@ -1,7 +1,7 @@
 // @see - https://www.electron.build/configuration/configuration
 {
   "$schema": "https://raw.githubusercontent.com/electron-userland/electron-builder/master/packages/app-builder-lib/scheme.json",
-  "appId": "YourAppID",
+  "appId": "com.mouse-automator.app",
   "asar": true,
   "productName": "Mouse Automator",
   "directories": {
@@ -15,7 +15,8 @@
     "target": [
       "dmg"
     ],
-    "artifactName": "${productName}-Mac-${version}-Installer.${ext}"
+    "artifactName": "${productName}-Mac-${version}-Installer.${ext}",
+    "icon": "./icon.png"
   },
   "win": {
     "asar": false,
@@ -29,7 +30,8 @@
         ]
       }
     ],
-    "artifactName": "${productName}-Windows-${version}-Setup.${ext}"
+    "artifactName": "${productName}-Windows-${version}-Setup.${ext}",
+    "icon": "./icon.png"
   },
   "nsis": {
     "oneClick": false,
@@ -41,7 +43,8 @@
     "target": [
       "AppImage"
     ],
-    "artifactName": "${productName}-Linux-${version}.${ext}"
+    "artifactName": "${productName}-Linux-${version}.${ext}",
+    "icon": "./icon.png"
   }
   
 }
