--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@jitsi/robotjs": "^0.6.13",
+    "@tanstack/react-query": "^5.45.1",
     "electron-store": "^9.0.0",
     "lodash": "^4.17.21",
     "ps-list": "^8.1.1",
