--- a/electron-builder.json5
+++ b/electron-builder.json5
@@ -5,7 +5,8 @@
   "asar": true,
   "productName": "Mouse Automator",
   "directories": {
-    "output": "release/${version}"
+    "output": "release/${version}",
+    "buildResources": "./public"
   },
   "files": [
     "dist",
@@ -16,7 +17,7 @@
       "dmg"
     ],
     "artifactName": "${productName}-Mac-${version}-Installer.${ext}",
-    "icon": "assets/icon.icns"
+    "icon": "./public/icon.icns"
   },
   "win": {
     "asar": false,
@@ -31,7 +32,7 @@
       }
     ],
     "artifactName": "${productName}-Windows-${version}-Setup.${ext}",
-    "icon": "assets/icon.icns"
+    "icon": "./public/icon.ico"
   },
   "nsis": {
     "oneClick": false,
