fix(win): working status indicator not showing on taskbar feat: title changed when task started

--- a/electron-builder.json5
+++ b/electron-builder.json5
@@ -20,7 +20,7 @@
     "icon": "./public/icon.icns"
   },
   "win": {
-    "asar": false,
+    "asar": true,
     "asarUnpack":["node_modules/ps-list"],
 
     "target": [
