--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "1.0.8",
   "type": "module",
   "author": "Terry Chan",
+  "description": "Mouse Automator is a lightweight, user-friendly desktop application designed to automate mouse clicks with ease. Whether you're gaming, testing software, or handling repetitive tasks, Mouse Automator has you covered!",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
@@ -19,11 +20,12 @@
     "@fortawesome/fontawesome-svg-core": "^6.5.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
-    "@jitsi/robotjs": "^0.6.13",
+    "@meadowsjared/robotjs": "^0.6.26",
     "@tanstack/react-query": "^5.45.1",
+    "@trufflesuite/ps-list": "^0.0.3",
     "electron-store": "^9.0.0",
+    "i": "^0.3.7",
     "lodash": "^4.17.21",
-    "ps-list": "^8.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-toastify": "^10.0.5"
@@ -45,6 +47,7 @@
     "electron": "^30.0.1",
     "electron-builder": "^24.13.3",
     "eslint": "^8.57.0",
+    "eslint-plugin-react": "^7.35.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
     "eslint-plugin-tailwindcss": "^3.17.0",
