--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mouse-automator",
   "private": true,
-  "version": "1.0.15",
+  "version": "1.0.16",
   "type": "module",
   "author": "Terry Chan",
   "description": "Mouse Automator is a lightweight, user-friendly desktop application designed to automate mouse clicks with ease. Whether you're gaming, testing software, or handling repetitive tasks, Mouse Automator has you covered!",
@@ -25,7 +25,7 @@
     "@trufflesuite/ps-list": "^0.0.3",
     "electron-store": "^9.0.0",
     "i": "^0.3.7",
-    "lodash": "^4.17.21",
+    "lodash-es": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-toastify": "^10.0.5"
@@ -36,6 +36,7 @@
     "@testing-library/user-event": "^14.5.2",
     "@types/jest": "^29.5.12",
     "@types/lodash": "^4.17.4",
+    "@types/lodash-es": "^4.17.12",
     "@types/react": "^18.2.64",
     "@types/react-dom": "^18.2.21",
     "@typescript-eslint/eslint-plugin": "^7.12.0",
